<resources>
    <string name="app_name">Ace RFID</string>
    <string name="select">Select</string>
    <string name="picker">Picker</string>
    <string name="auto_read_on_tag_scan">Auto read on tag scan?</string>
    <string name="type">Type</string>
    <string name="typec">Type:</string>
    <string name="color">Color</string>
    <string name="_00_00_00_00">00 00 00 00 00 00</string>
    <string name="tag_id">Tag ID:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="pick_color">Pick Color</string>
    <string name="tag_found">"TAG Found: "</string>
    <string name="this_device_does_not_support_mifare_ultralight_tags">This device does not support \"Mifare Ultralight\" tags</string>
    <string name="please_activate_nfc">Please activate NFC</string>
    <string name="data_written_to_tag">Data written to TAG</string>
    <string name="error_writing_to_tag">Error writing to TAG</string>
    <string name="invalid_tag_type">Invalid tag type</string>
    <string name="error_reading_tag">Error reading TAG</string>
    <string name="data_read_from_tag">Data read from TAG</string>
    <string name="unknown_or_empty_tag">Unknown or empty TAG</string>
    <string name="size">Size</string>
    <string name="info_temps">Extruder Temp: %d min | %d max\nBed Temp: %d min | %d max</string>
    <string name="hex_color_code">HEX Color Code</string>
    <string name="no_nfc_tag_found">No NFC tag found</string>
    <string name="close">Close</string>
    <string name="add_filament">Add Filament</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="numeric">0123456789</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="edit_filament">Edit Filament</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_filament">Delete Filament?</string>
    <string name="edit">Edit</string>
    <string name="serialdesc">e.g. Basic, Matte, Silk, Marble</string>
    <string name="help">Help</string>
    <string name="extruder_min">Extruder Min</string>
    <string name="extruder_max">Extruder Max</string>
    <string name="bed_min">Bed Min</string>
    <string name="bed_max">Bed Max</string>
    <string name="helpurl">https://github.com/DnG-Crafts/ACE-RFID/blob/main/docs/Filament/Filament.md</string>
    <string name="can_t_find_vendor_i_want">Can\'t find vendor I want</string>
    <string name="notice">Notice</string>
    <string name="cf_notice">Custom filament settings do not currently work with remote print or cloud print functions.</string>
    <string name="accept">Accept</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="submit">Submit</string>
    <string name="invalid_hex_code_please_use_aarrggbb_format">Invalid Hex Code. Please use AARRGGBB format.</string>
    <string name="enter_hex_color_aarrggbb">Enter Hex Color (AARRGGBB)</string>
    <string name="aarrggbb">AARRGGBB</string>
    <string name="rgb_sliders">ARGB Sliders</string>
    <string name="color_picker">Color Picker</string>
    <string name="preset_colors">Preset Colors</string>
    <string name="formatting_tag">Formatting tag…</string>
    <string name="tag_formatted">Tag formatted</string>
    <string name="failed_to_format_tag_for_writing">Failed to format tag for writing</string>
    <string name="import_txt">Import</string>
    <string name="export">Export</string>
    <string name="no_data_to_export">No data to export</string>
    <string name="database_legacy_import_failed">"Database legacy import failed: "</string>
    <string name="database_imported_successfully">Database imported successfully!</string>
    <string name="backup_file_not_found_in_downloads">"Backup file not found in Downloads: "</string>
    <string name="incorrect_database_file_selected">Incorrect database file selected\nThe filament_database.db is required</string>
    <string name="database_saf_import_failed">"Database SAF import failed: "</string>
    <string name="database_legacy_export_failed">"Database legacy export failed: "</string>
    <string name="database_exported_successfully_to_downloads_folder">Database exported successfully to Downloads folder!</string>
    <string name="database_saf_export_failed">"Database SAF export failed: "</string>
    <string name="database_exported_successfully">Database exported successfully!</string>
    <string name="failed_to_create_db_backup_file">Failed to create .db backup file.</string>
    <string name="cannot_write_to_selected_directory">Cannot write to selected directory.</string>
    <string name="select_backup_folder">Select backup folder</string>
    <string name="storage_permission_denied_cannot_perform_action">Storage permission denied. Cannot perform action.</string>
    <string name="import_cancelled">Import cancelled.</string>
    <string name="failed_to_select_import_file">Failed to select import file.</string>
    <string name="export_cancelled">Export cancelled.</string>
    <string name="failed_to_get_export_directory">Failed to get export directory.</string>
    <string name="photo_color">Photo Color</string>
    <string name="photo_capture_cancelled_or_failed">Photo capture cancelled or failed.</string>
    <string name="camera_permission_is_required_to_take_photos">Camera permission is required to take photos.</string>
    <string name="launch_app_on_tag_detect">Launch APP on tag detect?</string>
    <string name="values_reset">Values reset</string>
    <string name="invalid_input">Invalid input</string>
    <string name="field_cannot_be_empty_use_0">Field cannot be empty\nUse 0 for no bed temperature</string>
    <string name="this_temperature_is_too_low">This temperature is too low\nValues below 150 may cause issues</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="this_value_might_be_invalid">This value might be invalid\n1.75 is a valid diameter</string>
    <string name="the_length_is_too_short">The length is too short\nThe value is length in meters</string>
    <string name="minimum_8_characters_required">Minimum 8 characters required\nThe Format is: AARRGGBB</string>
    <string name="custom_tag_data">Custom Tag Data</string>
    <string name="tag_is_password_protected_unable_to_write_to_this_tag">Tag is password protected\nUnable to write to this tag</string>
    <string name="tag_is_password_protected_trying_default_password">Tag is password protected\nTrying default passwords</string>
    <string name="password_failed_unable_to_write_to_this_tag">Password failed\nUnable to write to this tag</string>
    <string name="diameter">Diameter</string>
    <string name="length">Length</string>
    <string name="brand">Brand</string>
    <string name="sku">SKU</string>
    <string name="vendor">Vendor</string>
    <string name="serial">Serial</string>
    <string name="ultralight_c">Ultralight C</string>
    <string name="ultralight_not_currently_supported">Ultralight not currently supported</string>
    <string name="format">Format</string>
    <string name="this_will_erase_the_data_on_the_tag_and_format_it_for_writing">This will erase the data on the tag and format it for writing</string>
    <string name="format_tag">Format Tag</string>
    <string name="app_database">App Database</string>
    <string name="export_app_database">Export App Database</string>
    <string name="import_app_database">Import App Database</string>
    <string name="rfid_functions">RFID Functions</string>
    <string name="auto_read">Auto Read</string>
    <string name="custom_tag_data_input">Custom Tag Data Input</string>
    <string name="read_tag_memory">Read Tag Memory</string>
    <string name="nfc_functions">NFC Functions</string>
    <string name="launch_app">Launch APP</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app">App</string>
</resources>