<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="500dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sku"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sku"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtsku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:maxLength="20"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_brand"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/brand"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/layout_sku">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtbrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:maxLength="20"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/type"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/layout_brand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txttype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:maxLength="20"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/color"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:endIconDrawable="@drawable/twotone_palette_24"
                app:endIconMode="custom"
                app:endIconTint="@color/primary_brand"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/layout_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:maxLength="8"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_length"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/length"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/layout_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtlength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:maxLength="4"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_diam"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/diameter"
                app:boxBackgroundColor="@color/background_alt"
                android:textColorHint="@color/primary_brand"
                app:boxStrokeColor="@color/input_border_color"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/layout_length">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtdiam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:maxLength="4"
                    android:textColor="@color/text_main" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/row_ext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layout_diam">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_extmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/background_alt"
                    android:textColorHint="@color/primary_brand"
                    app:boxStrokeColor="@color/input_border_color"
                    android:hint="@string/extruder_min"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtextmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:textColor="@color/text_main"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_extmax"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/background_alt"
                    android:textColorHint="@color/primary_brand"
                    app:boxStrokeColor="@color/input_border_color"
                    android:hint="@string/extruder_max"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtextmax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:textColor="@color/text_main"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_bed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/row_ext">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_bedmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/background_alt"
                    android:textColorHint="@color/primary_brand"
                    app:boxStrokeColor="@color/input_border_color"
                    android:hint="@string/bed_min"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtbedmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:textColor="@color/text_main"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_bedmax"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/background_alt"
                    android:textColorHint="@color/primary_brand"
                    app:boxStrokeColor="@color/input_border_color"
                    android:hint="@string/bed_max"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtbedmax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:textColor="@color/text_main"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row_bed">

                <ImageView
                    android:id="@+id/btnrst"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/twotone_restart_alt_24"
                    app:tint="@color/primary_brand" />

                <ImageView
                    android:id="@+id/btnfmt"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/twotone_layers_clear_24"
                    app:tint="@color/primary_brand" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_icons">

                <Button
                    android:id="@+id/btncls"
                    android:textColor="@color/text_inverted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:padding="14dp"
                    android:text="@string/close"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnread"
                    android:textColor="@color/text_inverted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/read"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnwrite"
                    android:textColor="@color/text_inverted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="14dp"
                    android:text="@string/write"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>